--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                 Самая малая часть плана – заход на землю с минимальными вложениями:
             </p>
             <p class="article__text">
-                участок 50 соток всего за 150 тысяч рублей - первый взнос и рассрочка доплаты по 5000 рублей в месяц.
+                 участок 50 соток всего за 150 тысяч рублей - первый взнос и рассрочка доплаты на 2 года без % - 8000 руб\сотка (электричество на участке)
             </p>
 
             <h2 class="article__subtitle">
@@ -98,10 +98,10 @@
             <ol class="article__list">
                 <p class="article__text">
                 <li class="article__list-item">
-                    Родных соседей <a href="#">(Условия)</a>
+                    Родных соседей
                 </li>
                 <li class="article__list-item">
-                    Инвесторов <a href="#">(Условия)</a>
+                    Инвесторов
                 </li>
             </ol>
 
