--- a/index.html
+++ b/index.html
@@ -20,10 +20,18 @@
 <body>
     <header id="header">
         <div class="header-content">
+            <h2 class="card-title">
+                Новая Рига<br>
+                125км от МКАД<br>
+                Река Руза
+            </h2>
             <h2 class="header-title">
                 <span>Родное</span>
                 <img src="/img/rodnoe.png" alt="Родное">
             </h2>
+            <p class="header-text">
+                8000 руб\сотка (электричество на участке)
+            </p>
             <a href="index.html#contacts" class="header-btn  green-btn">
                 Присоединиться
             </a>
@@ -146,8 +154,9 @@
                         Дома будут возводится от 100 кв.м. на семью со стоимостью стройматериалов примерно 10 тыс. за 1 кв. м.
                     </p>
                     <p class="card-text">
-                        Необходимые средства для строительства Вы можете получить, участвуя в программе <a class="link" href="#">«Родные соседи»</a>
+                        Необходимые средства для строительства Вы можете получить, участвуя в программе «Родные соседи»
                     </p>
+                    <a class="welcome-area__card-btn card-btn" href="/wellbeing.html">Подробнее</a>
                 </div>
             </div>
             <div class="card  card--greens">
@@ -162,6 +171,8 @@
                         <p class="card-text">
                             Партнерская программа «РОДНЫЕ СОСЕДИ» даст Вам возможность получения прибыли в течение первого года с момента прихода в Эко-селение. Таким образом, за несколько лет селянин сможет поставить свой собственный СБВ меньшего объема  – с этого момента Вы трудитесь на себя и свою семью!
                         </p>
+                        <a class="welcome-area__card-btn card-btn" href="/sbv.html">Подробнее</a>
+                        
                     </div>
             </div>
         </div>
@@ -204,6 +215,7 @@
                     <p class="card-text">
                         Каждый найдет себе занятие по душе, приносящее удовольствие, достаток, но в то же время не отнимающее значительную часть жизни, времени и сил, не отвлекающее от семьи: детей, близких.
                     </p>
+                    <a class="welcome-area__card-btn card-btn" href="index.html#contacts">Присоединиться</a>
                 </div>
             </div>
         </div>
@@ -234,18 +246,7 @@
                             ☼ иметь в запасе миллионы на покупку участка, постройку дома и достойное начало деятельности на своей земле!
                         </li>
                     </ul>
-                    <p class="card-text">
-                        Достаток Вы получите от участия в Партнерской программе: без отрыва от "производства",  2-3 часа в неделю по выходным - и уже через год  Вы сможете построить дом на СВОЕЙ ЗЕМЛЕ!
-                    </p>
-                    <p class="card-text">
-                        В чем же идея Программы?
-                    </p>
-                    <p class="card-text">
-                        А она заключается, прежде всего, в том, что все мы хотим жить в окружении близких нам по духу и мировоззрению людей. Желательно, чтобы это были друзья, хорошо знакомые люди, отношения с которыми проверены временем.
-                    </p>
-                    <p class="card-text">
-                        Так приглашайте этих людей быть Вашими соседями в Эко-селении «Родное»! Вы не только будете жить рядом с ними, но и получите возможность выкупить свою землю и оплатить постройку родовой усадьбы без дополнительных финансовых вложений!
-                    </p>
+                    <a class="welcome-area__card-btn card-btn" href="/wellbeing.html">Подробнее</a>
                 </div>
             </div>
         </div>
@@ -272,7 +273,8 @@
                         <input class="contacts-btn card-btn" type="submit" value="Присоединиться">
                     </form>
                 </div>
-                <a class="contacts-email" href="mailto:eco-rodnoe@yandex.ru">eco-rodnoe@yandex.ru</a>
+                <a class="contacts-email" href="mailto:eco-rodnoe@yandex.ru">eco-rodnoe@yandex.ru</a><br>
+                <a class="contacts-email" href="tel:+79160256767">+7 (916) 025-67-67</a>
             </div>
         </div>
     </section>
