--- a/wellbeing.html
+++ b/wellbeing.html
@@ -49,56 +49,34 @@
 
     <section class="article">
         <div class="article__inner  container">
-           <h1 class="article__title">
-               НаРождение РОДНОГО
+          <h1 class="article__title">
+               Возможности проекта
            </h1>
             <p class="article__text">
-                Большинство людей, родившихся и живущих сегодня в городах, по рукам и ногам связаны путами социума. Нам все время некогда. Мы постоянно в движении и на РАБоте! Ежедневно, в том числе и в выходные с утра до вечера мы в движении. Даже в выходные нам нужно ехать в гипермаркет. Этого требует семья. Размер заработной платы, размер квартиры и сумма ежемесячных платежей за ипотеку, аренду квартиры, услуг ЖКХ, налоги, штрафы за неправильную парковку …. ПОСТОЯННО вливают негатив и тревогу в наш разум. Этот негатив нарастает, когда мы с завистью смотрим на красивую жизнь с телеэкранов и сквозь приоткрытые стекла тысяч дорогих иномарок, проезжающих мимо нас. И мы постоянно стремимся ЧЕГО- ТО достичь! И все время куда- то бежим, бежим, бежим…
+                Партнерская программа «РОДНЫЕ СОСЕДИ» позволяет осуществить плавный переход из рутины городского социума в СЧАСТЛИВУЮ ЖИЗНЬ. 
             </p>
             <p class="article__text">
-                За окном постоянно слышим шум движения машин с дорог и их сигнализаций во дворах. И ежедневно нас и наших детей зомбирует СМРАД - Средства Массовой Рекламы, Агитации и Дезинформации (СМИ). Так живут все! Только в городах в наше время есть РАБОТА, позволяющая хоть как то сводить концы с концами! Я даже не буду вникать в подробности экологии, волны мигрантов, которые УЖЕ везде, а их дети в школах, где учатся наши дети и внуки.
+                Ее огромное преимущество заключается в том, что Вам НЕ нужно РИСКОВАТЬ: <br>
+                - продавать квартиру<br>
+                - бросать работу и ехать в неизвестность<br>
+                - брать кредит<br>
+                - иметь в запасе миллионы на покупку участка, постройку дома и достойное начало деятельности на своей земле!
             </p>
             <p class="article__text">
-                В социуме мегаполиса остановить это движение равнозначно остановке самой жизни. Мы с рождения затянуты в круговорот городского социума. И сами затягиваем в этот круговорот своих детей. Зачем? Ответ мы знаем: для «достойной жизни», как нам всем внушил СМРАД: нам необходим определенный набор благ. Работа с приличным окладом или достатком от своего дела, квартира – четыре железобетонные экранированные фекальными трубами и электричеством частотой в 50Гц стены, за которыми наши тонкие тела всегда ОЩУЩАЮТ, а уши слышат, глаза видят скопление негатива от наших соседей. Которые меняются все чаще и чаще. И мы все с нетерпением ждем лета и ВЫХОДНЫХ! Что бы проснуться ни свет, ни заря и занять очередь в пробке на выезд из ГОРОДА на дачу в 6 соток, что досталась от родителей и нашего социалистического прошлого! Два дня мы отдыхаем, глядя не на экран телевизора, а на забор или, простите, жопу соседа по СНТ. И только летом у нас всех есть возможность покупать, как нам кажется без ГМО и без НИТРАТОВ овощи, выращенные на наших РОДНЫХ полях не в супермаркетах, а на рынках выходного дня в городах и лишь некоторым выращивать самим. Но открою вам БОЛЬШОЙ секрет. Осталось всего пару тройку лет такой радости. У моей мамы на огороде уже не растут помидоры, которые она выращивала ВСЕГДА. Вернее сказать растут. Но помидоры уже не те, что вчера. Они почему- то вырастают, как говорит моя мама РЖАВЫЕ. Почему не понимает? А не понимает потому, что смотрит СМРАД, где о ХИМТРЕЙЛАХ, из дня в день распыляющих с неба на наши головы и землю матушку тонны химических аэрозолей с частицами бария, алюминия и прочей химии не говорят ни полслова. ЗАПРЕЩЕНО! Зачем и кто это делает? Транс Национальные Корпорации (ТНК) типа «Монсанта». Что же это за ТНК? Монсанта разработала ГМО сорта овощей и сельхоз культур, устойчивых к распыляемой ими же химии. Вскоре на нашей земле смогут расти ТОЛЬКО сорта ГМО. Зачем им это нужно? Причины две: основная – контроль популяции населения вторая – ДЕНЬГИ, ДЕНЬГИ, ДЕНЬГИ!
+               Достаток Вы получите от участия в Партнерской программе: без отрыва от "производства",  2-3 часа в неделю по выходным - и уже через год  Вы сможете построить дом на СВОЕЙ ЗЕМЛЕ! В чем же идея Программы?
             </p>
             <p class="article__text">
-                <i>
-                    Мы все уверены. Нам внушили: ВЫХОДА НЕТ! Так живут ВСЕ! За все нужно платить!
-                </i>
+                А она заключается, прежде всего, в том, что все мы хотим жить в окружении близких нам по духу и мировоззрению людей. Желательно, чтобы это были друзья, хорошо знакомые люди, отношения с которыми проверены временем. Так приглашайте этих людей быть Вашими соседями в Эко-селении «Родное»! Вы не только будете жить рядом с ними, но и получите возможность выкупить свою землю и оплатить постройку родовой усадьбы без дополнительных финансовых вложений!
             </p>
             <p class="article__text">
-                <b>Но так ли ВСЕ на самом деле? Так ли жили наши родители, деды и прадеды?</b>
+                Участие в проекте в качестве ИНВЕСТОРА в сочетании с Партнерской программой «РОДНЫЕ СОСЕДИ» позволит вернуть инвестиции с прибылью до 100% от года до двух лет.  Размер взноса для ИНВЕСТОРА - от 3,5 млн.руб.
             </p>
             <p class="article__text">
-                Какие цели мне хотелось достичь?
+               Как это возможно? Подробности Вы можете узнать в личной беседе при встрече. 
             </p>
-            <p class="article__text">
-                Начну с того, что я обычный человек в недавнем прошлом среднего достатка. О чем я? Да о том, что накоплений на дом, участок или новую квартиру У МЕНЯ НЕТ!
-            </p>
-            <ol class="article__list">
-                <p class="article__text">
-                    <b>
-                        Итак, возвращаюсь к целям:
-                    </b>
-                </p>
-                <li class="article__list-item">
-                    Жить в своем доме на своей земле
-                </li>
-                <li class="article__list-item">
-                    Выращивать свои экологически чистые овощи – сегодня это возможно только в теплицах
-                </li>
-                <li class="article__list-item">
-                    Подготовить план для достижения этих целей
-                </li>
-                <li class="article__list-item">
-                    Сегодня остается найти соратников по мыслям и убеждениям для воплощения в жизнь плана перехода на землю и начала достойной жизни на земле
-                </li>
-            </ol>
-            <p class="article__text  article__text--highligted">
-                Уверяю! Это возможно! Не верьте на слово!<br>
-                Читайте, вдумывайтесь, осознавайте!
 
-                <a href="index.html#contacts" class="green-btn">Хочу присоединиться!</a>
+            <p class="article__text  article__text--highligted">
+                <a href="index.html#contacts" class="green-btn">Хочу узнать!</a>
             </p>
         </div>
     </section>
