Fix video and heading

--- a/index.html
+++ b/index.html
@@ -21,17 +21,14 @@
     <header id="header">
         <div class="header-content">
             <h2 class="card-title">
-                Новая Рига<br>
-                125км от МКАД<br>
-                Река Руза
+                Новая Рига
+                <br> 125км от МКАД
+                <br> Река Руза
             </h2>
             <h2 class="header-title">
                 <span>Родное</span>
                 <img src="/img/rodnoe.png" alt="Родное">
             </h2>
-            <p class="header-text">
-                8000 руб\сотка (электричество на участке)
-            </p>
             <a href="index.html#contacts" class="header-btn  green-btn">
                 Присоединиться
             </a>
@@ -43,24 +40,43 @@
             <div class="container">
                 <div class="navbar-header">
                     <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                        aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand logo" href="index.html"><img src="img/sun.png" alt="Солнце" width="173" height="174"></a>
+                    <a class="navbar-brand logo" href="index.html">
+                        <img src="img/sun.png" alt="Солнце" width="173" height="174">
+                    </a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul id="top-menu" class="nav navbar-nav main-nav menu-scroll">
-                        <li class="active"><a href="index.html">Главная</a></li>
-                        <li><a href="about.html">О проекте</a></li>
-                        <li><a href="wellbeing.html">Возможности</a></li>
-                        <li><a href="important.html">Особенности</a></li>
-                        <li><a href="shahovskaya.html">Родное Шаховская</a></li>
-                        <li><a href="tula.html">Родное Тула</a></li>
-                        <li><a href="sbv.html">Солнечный Био Вегетарий</a></li>
-                        <li><a href="index.html#contacts">Обратная связь</a></li>
+                        <li class="active">
+                            <a href="index.html">Главная</a>
+                        </li>
+                        <li>
+                            <a href="about.html">О проекте</a>
+                        </li>
+                        <li>
+                            <a href="wellbeing.html">Возможности</a>
+                        </li>
+                        <li>
+                            <a href="important.html">Особенности</a>
+                        </li>
+                        <li>
+                            <a href="shahovskaya.html">Родное Шаховская</a>
+                        </li>
+                        <li>
+                            <a href="tula.html">Родное Тула</a>
+                        </li>
+                        <li>
+                            <a href="sbv.html">Солнечный Био Вегетарий</a>
+                        </li>
+                        <li>
+                            <a href="index.html#contacts">Обратная связь</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -71,12 +87,14 @@
         <div class="container">
             <div class="welcome-area">
                 <p class="welcome-area__text">
-                    Нами движет поиск гармонии и новой, свободной жизни. 
+                    Нами движет поиск гармонии и новой, свободной жизни.
                     <br/> Нас волнуют вопросы экологии и качество продуктов, которые мы едим.
-                    <br/> Нам надоела городская суета, <br/> шум и рутина.
+                    <br/> Нам надоела городская суета,
+                    <br/> шум и рутина.
                     <br/> И мы понимаем, что уровень жизни и качество жизни – это вовсе не одно и то же.
                 </p>
-                <iframe class="video" src="https://player.vimeo.com/video/213354211" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                <iframe class="video" src="https://vimeo.com/240264750" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                    allowfullscreen></iframe>
                 <div class="welcome-area__card card">
                     <h2 class="welcome-area__card-title card-title">Концепция</h2>
                     <div class="welcome-area__card-inner card-inner">
@@ -86,7 +104,7 @@
                         <ul class="card-list">
                             <li>
                                 ☼ Образование Родовых поместий на базе формы государственной регистрации КФХ – Крестьянское Фермерское Хозяйство
-                                 <!-- – Подробнее по ссылке (доп.страничка на Юр.вопросы – ответы) -->
+                                <!-- – Подробнее по ссылке (доп.страничка на Юр.вопросы – ответы) -->
                             </li>
                             <li>
                                 ☼ Производство ЭКО-продукции на биогумусе в СБВ (Солнечный Био-Вегетарий)
@@ -109,19 +127,22 @@
                         </ul>
                         <p class="welcome-area__card-text card-text">
                             <b>
-                                Не нужно РИСКОВАТЬ: продавать квартиру, бросать работу и ехать в неизвестность, брать кредит, иметь в запасе миллионы на покупку участка, постройку дома и достойное начало деятельности на своей земле!
+                                Не нужно РИСКОВАТЬ: продавать квартиру, бросать работу и ехать в неизвестность, брать кредит, иметь в запасе миллионы на
+                                покупку участка, постройку дома и достойное начало деятельности на своей земле!
                             </b>
                         </p>
                         <p class="welcome-area__card-text card-text">
                             <b>
-                                Достаток Вы получите от участия в Партнерской программе - без отрыва от «производства»,  2-3 часа в неделю по выходным - и через год Вы строите дом на СВОЕЙ ЗЕМЛЕ!
+                                Достаток Вы получите от участия в Партнерской программе - без отрыва от «производства», 2-3 часа в неделю по выходным - и
+                                через год Вы строите дом на СВОЕЙ ЗЕМЛЕ!
                             </b>
                         </p>
-<!--                        <a class="welcome-area__card-btn card-btn" href="#">Подробнее</a>-->
-                     </div>
-                     <div class="welcome-area__footer">
-                          ПРИХОДИТЕ! <br>РОДНАЯ  ЗЕМЛЯ  ЖДЕТ  ВАС!
-                     </div>
+                        <!--                        <a class="welcome-area__card-btn card-btn" href="#">Подробнее</a>-->
+                    </div>
+                    <div class="welcome-area__footer">
+                        ПРИХОДИТЕ!
+                        <br>РОДНАЯ ЗЕМЛЯ ЖДЕТ ВАС!
+                    </div>
                 </div>
             </div>
         </div>
@@ -139,16 +160,19 @@
                         Для этого нужна земля и добротный дом на этой земле, построенный своими руками.
                     </p>
                     <p class="card-text">
-                        Мы считаем правильным, чтобы селяне – родные соседи – объединились и строили дома друг другу скопом. Это поможет максимально сократить срок возведения постройки, а также объединит и сплотит всех нас.
+                        Мы считаем правильным, чтобы селяне – родные соседи – объединились и строили дома друг другу скопом. Это поможет максимально
+                        сократить срок возведения постройки, а также объединит и сплотит всех нас.
                     </p>
                     <p class="card-text">
-                        Кроме этого, строители получат огромный опыт, которые затем, при желании, смогут использовать и далее, создав бригаду и возводя дома в соседних селениях.
+                        Кроме этого, строители получат огромный опыт, которые затем, при желании, смогут использовать и далее, создав бригаду и возводя
+                        дома в соседних селениях.
                     </p>
                     <p class="card-text">
-                        К тому же мы уйдем от переплаты за услуги строительных фирм. Кто решит, что лучше заплатить строителям, чем делать самому – ваш выбор и ваше право.
+                        К тому же мы уйдем от переплаты за услуги строительных фирм. Кто решит, что лучше заплатить строителям, чем делать самому
+                        – ваш выбор и ваше право.
                     </p>
                     <p class="card-text">
-                        Наша цель – максимально «умное»,  энергоэффективное, автономное жилье, требующее минимальных затрат на отопление и уход.
+                        Наша цель – максимально «умное», энергоэффективное, автономное жилье, требующее минимальных затрат на отопление и уход.
                     </p>
                     <p class="card-text">
                         Дома будут возводится от 100 кв.м. на семью со стоимостью стройматериалов примерно 10 тыс. за 1 кв. м.
@@ -161,19 +185,32 @@
             </div>
             <div class="card  card--greens">
                 <h2 class="card-title">Труд в Эко-селении</h2>
-                    <div class="card-inner">
-                        <p class="card-text">
-                            Жизнь на земле, безусловно,  предполагает выращивание различных с/х культур для того, чтобы прокормить себя и свою семью в течение года. Однако, у любого человека сегодня есть еще целый ряд потребностей, для удовлетворения которых нам всем   необходимы и материальные средства. Иными словами, мы должны предусмотреть возможность зарабатывать деньги, не выезжая из Эко-селения. И мы этот вопрос поставили в ряд основных задач Родного.
-                        </p>
-                        <p class="card-text">
-                            Основная возможность выращивать экологически чистую продукцию в наших широтах круглый год – СБВ - Солнечный Био-вегетарий – 1200: умная теплица с газовым отоплением, капельным поливом, аккумуляторами тепла и биогумусом в качестве удобрения. Мин. годовая производительность такой теплицы – 60 тонн продукции (овощей, фруктов, ягод, зелени и пр.) В ценах оптовой продажи это почти 8 млн. руб. в год.  Также можно продавать сам биогумус и рассаду. Действительно значимой статьей дохода является семеноводство – оно может принести до 300% прибыли в год! Общий возможный годовой доход от СБВ-1200: до 15 млн.руб. Мы выделяем  11 Га земли для строительства  кластера из 30 СБВ-1200 . На участке находятся 12 с\х построек , которые мы будем использовать по своему усмотрению, в т.ч. под разведение грибов. Разведения животных для забоя  у нас НЕ БУДЕТ!
-                        </p>
-                        <p class="card-text">
-                            Партнерская программа «РОДНЫЕ СОСЕДИ» даст Вам возможность получения прибыли в течение первого года с момента прихода в Эко-селение. Таким образом, за несколько лет селянин сможет поставить свой собственный СБВ меньшего объема  – с этого момента Вы трудитесь на себя и свою семью!
-                        </p>
-                        <a class="welcome-area__card-btn card-btn" href="/sbv.html">Подробнее</a>
-                        
-                    </div>
+                <div class="card-inner">
+                    <p class="card-text">
+                        Жизнь на земле, безусловно, предполагает выращивание различных с/х культур для того, чтобы прокормить себя и свою семью в
+                        течение года. Однако, у любого человека сегодня есть еще целый ряд потребностей, для удовлетворения
+                        которых нам всем необходимы и материальные средства. Иными словами, мы должны предусмотреть возможность
+                        зарабатывать деньги, не выезжая из Эко-селения. И мы этот вопрос поставили в ряд основных задач Родного.
+                    </p>
+                    <p class="card-text">
+                        Основная возможность выращивать экологически чистую продукцию в наших широтах круглый год – СБВ - Солнечный Био-вегетарий
+                        – 1200: умная теплица с газовым отоплением, капельным поливом, аккумуляторами тепла и биогумусом
+                        в качестве удобрения. Мин. годовая производительность такой теплицы – 60 тонн продукции (овощей,
+                        фруктов, ягод, зелени и пр.) В ценах оптовой продажи это почти 8 млн. руб. в год. Также можно продавать
+                        сам биогумус и рассаду. Действительно значимой статьей дохода является семеноводство – оно может
+                        принести до 300% прибыли в год! Общий возможный годовой доход от СБВ-1200: до 15 млн.руб. Мы выделяем
+                        11 Га земли для строительства кластера из 30 СБВ-1200 . На участке находятся 12 с\х построек , которые
+                        мы будем использовать по своему усмотрению, в т.ч. под разведение грибов. Разведения животных для
+                        забоя у нас НЕ БУДЕТ!
+                    </p>
+                    <p class="card-text">
+                        Партнерская программа «РОДНЫЕ СОСЕДИ» даст Вам возможность получения прибыли в течение первого года с момента прихода в Эко-селение.
+                        Таким образом, за несколько лет селянин сможет поставить свой собственный СБВ меньшего объема – с
+                        этого момента Вы трудитесь на себя и свою семью!
+                    </p>
+                    <a class="welcome-area__card-btn card-btn" href="/sbv.html">Подробнее</a>
+
+                </div>
             </div>
         </div>
     </section>
@@ -197,23 +234,26 @@
                             ☼ Садоводство, плодопитомник, семеноводство
                         </li>
                         <li>
-                            ☼ Пчеловодство. Сбор даров леса:  орехов, ягод, грибов, смолы, берёзового сока, мха, лекарственных растений и т.п.
+                            ☼ Пчеловодство. Сбор даров леса: орехов, ягод, грибов, смолы, берёзового сока, мха, лекарственных растений и т.п.
                         </li>
                         <li>
                             ☼ Молочное животноводство. Сбор и переработка шерсти. Содержание птичника. Разведение лошадей
                         </li>
                         <li>
-                            ☼ Тепличное хозяйство. Мельница, пекарня, хлебопекарня. Переработка продукции, консервирование, сушка, изготовление соков, напитков, сыроварение, быстрая заморозка и пр.
+                            ☼ Тепличное хозяйство. Мельница, пекарня, хлебопекарня. Переработка продукции, консервирование, сушка, изготовление соков,
+                            напитков, сыроварение, быстрая заморозка и пр.
                         </li>
                         <li>
-                            ☼ Эко-, био- и этнотуризм. Молодежный лагерь. Гостевой дом. Виды деятельности, связанные с информационными технологиями. Научные исследования
+                            ☼ Эко-, био- и этнотуризм. Молодежный лагерь. Гостевой дом. Виды деятельности, связанные с информационными технологиями.
+                            Научные исследования
                         </li>
                         <li>
                             ☼ Народные празднования. Фестивали. Обучающие семинары. Фриланс. Школа. Народные ремесла. Промыслы. Ярмарка
                         </li>
                     </ul>
                     <p class="card-text">
-                        Каждый найдет себе занятие по душе, приносящее удовольствие, достаток, но в то же время не отнимающее значительную часть жизни, времени и сил, не отвлекающее от семьи: детей, близких.
+                        Каждый найдет себе занятие по душе, приносящее удовольствие, достаток, но в то же время не отнимающее значительную часть
+                        жизни, времени и сил, не отвлекающее от семьи: детей, близких.
                     </p>
                     <a class="welcome-area__card-btn card-btn" href="index.html#contacts">Присоединиться</a>
                 </div>
@@ -261,19 +301,22 @@
                 </p>
                 <!-- form -->
                 <div class="contacts-form">
-                    <p class="contacts-text  contacts-text--form">Заполните анкету,<br> и мы свяжемся с Вами очень быстро :)</p>
+                    <p class="contacts-text  contacts-text--form">Заполните анкету,
+                        <br> и мы свяжемся с Вами очень быстро :)</p>
                     <form action="https://formspree.io/asalisinasa@gmail.com" method="POST">
                         <!-- <input type="hidden" name="_next" value="//site.io/thanks.html"/> -->
                         <input class="contacts-text-field" type="text" name="first-name" placeholder="Имя" id="first-name" value="" required>
                         <input class="contacts-text-field" type="text" name="second-name" placeholder="Фамилия" id="second-name" value="" required>
                         <input class="contacts-text-field" type="email" name="_replyto" placeholder="E-mail" id="email" value="" required>
                         <input class="contacts-text-field" type="text" name="tel" placeholder="Телефон" id="email" value="">
-                        <input class="contacts-text-field full" type="text" name="partner" placeholder="ФИО «Родного соседа», рекомендовавшего Вам проект" id="email" value="">
+                        <input class="contacts-text-field full" type="text" name="partner" placeholder="ФИО «Родного соседа», рекомендовавшего Вам проект"
+                            id="email" value="">
                         <textarea class="contacts-text-field whole" cols="50" rows="10" name="text" placeholder="Комментарий" id="text" required></textarea>
                         <input class="contacts-btn card-btn" type="submit" value="Присоединиться">
                     </form>
                 </div>
-                <a class="contacts-email" href="mailto:eco-rodnoe@yandex.ru">eco-rodnoe@yandex.ru</a><br>
+                <a class="contacts-email" href="mailto:eco-rodnoe@yandex.ru">eco-rodnoe@yandex.ru</a>
+                <br>
                 <a class="contacts-email" href="tel:+79160256767">+7 (916) 025-67-67</a>
             </div>
         </div>
