--- a/index.html
+++ b/index.html
@@ -93,8 +93,17 @@
                     <br/> шум и рутина.
                     <br/> И мы понимаем, что уровень жизни и качество жизни – это вовсе не одно и то же.
                 </p>
-                <iframe class="video" src="https://vimeo.com/240264750" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
-                    allowfullscreen></iframe>
+                <div class="video" style="padding:56.25% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/240264750" style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                </div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
+                <p>
+                    <a href="https://vimeo.com/240264750">EcoRodnoe_RUS_720P_Version_003_Vimeo</a> from
+                    <a href="https://vimeo.com/rodnoe2017">RODNOE</a> on
+                    <a href="https://vimeo.com">Vimeo</a>.</p>
+                <!-- <iframe class="video" src="https://vimeo.com/240264750" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen
+                    allowfullscreen></iframe> -->
                 <div class="welcome-area__card card">
                     <h2 class="welcome-area__card-title card-title">Концепция</h2>
                     <div class="welcome-area__card-inner card-inner">
